--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>
         <%= title %>
     </title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">    <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/css/all.css" />
     <link rel="stylesheet" type="text/css" href="/css/template-dashboard.css" />
     <link rel="stylesheet" type="text/css" href="/css/table.css" />
     <link rel="stylesheet" type="text/css" href="/css/modal.css" />
-    <style type="text/css">
-
-    </style>
+    <style type="text/css"></style>
+    <script src="https://kit.fontawesome.com/65753c16c3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,7 +25,6 @@
             </p>
             <div class="add-btn" onclick="openModal()">+ Create Template</div>
         </div>
-
         <div id="myModal" class="modal">
             <div class="modal-content template-modal">
                 <div class="close-container">
@@ -42,27 +40,11 @@
                 </form>
             </div>
         </div>
-        <div id="metrics_modal" class="modal">
-            <div class="modal-content metrics-modal">
-                <div class="close-container">
-                    <span class="close" onclick="closeMetricsModal()">&times;</span>
-                </div>
-                <p class="metrics_modal-title" id="metrics-modal-title">Metrics for </p>
-                <div class="metrics_modal-info">
-                    <p id="metrics-creation">Created: 10/9/2020 </p>
-                    <p id="metrics-lastused">Last Used: 10/9/2020</p>
-                    <p id="metrics-timesused">Times Used: </p>
-                </div>
-            </div>
-        </div>
         <table id="templates-table0">
             <thead>
                 <tr>
                     <td class="subtitle_cont">
                         <b class="subtitle">Recommendation Templates</b>
-                    </td>
-                    <td>
-                        <b>Number of Times Template Used</b>
                     </td>
                     <td>
                     </td>
@@ -88,13 +70,14 @@
         <br>
         <br>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript">
     var recommendation_button = document.getElementById("recommendation-button");
     recommendation_button.innerHTML = '<img src="/images/add_template.png" />';
 </script>
-
 <script>
     var current_page = [1, 1];
     var records_per_page = 5;
@@ -105,7 +88,7 @@
     // Get the modal
     var modal = document.getElementById('myModal');
     var modal_email = document.getElementById('myModal_email');
-    var metrics_modal = document.getElementById('metrics_modal')
+
     // When the user clicks on the button, open the modal
     function openModal() {
         modal.style.display = "block";
@@ -113,10 +96,6 @@
 
     function openEmailModal() {
         modal_email.style.display = "block";
-    }
-
-    function openMetricsModal() {
-        metrics_modal.style.display = "block";
     }
 
     // When the user clicks on <span> (x), close the modal
@@ -128,8 +107,45 @@
         modal_email.style.display = "none";
     }
 
-    function closeMetricsModal() {
-        metrics_modal.style.display = "none";
+    function displayMetrics(i) {
+        var timesUsed = data[0][i].metric;
+        var metricsHtml = `
+        <div class="row text-center">
+            <div class="col-xs-4 metric">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="metric-title">times used</p>
+                        <p class="metric-text"> ${timesUsed} </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 metric">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="metric-title">last used</p>
+                        <p class="metric-text">10/12/2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 metric">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="metric-title">created</p>
+                        <p class="metric-text">5/13/2019</p>
+                    </div>
+                </div>
+            </div>
+        </div>`
+        var popover = $('#metrics').attr('data-content', metricsHtml).data('bs.popover');
+
+         //toggle the popover for metrics
+        $(document).ready(function(){
+            $('[data-toggle="popover"]').popover({
+                placement: 'top',
+                trigger: 'hover',
+                html: true,
+            });
+        });
     }
 
     function editTemplate(id) {
@@ -201,15 +217,6 @@
                 console.log('error');
             }
         });
-    }
-
-    function displayMetrics(i) {
-        var template_name = document.getElementById("metrics-modal-title");
-        template_name.innerText = "Metrics for " + data[0][i].name
-
-        var times_used = document.getElementById("metrics-timesused");
-        times_used.innerText = "Times used: " + data[0][i].metric
-        openMetricsModal();
     }
 
     // When the user clicks anywhere outside of the modal, close it
@@ -308,13 +315,16 @@
     function generateRecTemplateRow(row_count, i) {
         var table = document.getElementById("templates-table0");
         var row = table.insertRow(row_count);
-        var cells = [row.insertCell(0), row.insertCell(1), row.insertCell(2)];
+        var cells = [row.insertCell(0), row.insertCell(1)];
 
         cells[0].innerHTML = data[0][i].name;
-        cells[1].innerHTML = "<p class='metrics'>" + data[0][i].metric + "</p>";
-        cells[2].innerHTML = "<img class='icon' src='/images/question_mark.png' onclick='displayMetrics(\"" + i + "\")'/>";
-        cells[2].innerHTML += "<img class='icon' src='/images/pencil.png' onclick='editTemplate(\"" + data[0][i]._id + "\")'/>";
-        cells[2].innerHTML += "<img class='icon' src='/images/delete.png' onclick='deleteRow(\"" + data[0][i]._id + "\")'/>";
+        cells[1].innerHTML = "<div class='actions' id='actions'>";
+        
+        var actions = document.getElementById('actions');
+        actions.innerHTML += "<i class='fas fa-pencil-alt fa-lg' onclick='editTemplate(\"" + data[0][i]._id + "\")'></i>";
+        actions.innerHTML += "<i class='fas fa-trash fa-lg' onclick='deleteRow(\"" + data[0][i]._id + "\")'></i>";
+        actions.innerHTML += "<i id='metrics' class='fas fa-chart-bar fa-lg' data-trigger=\"hover\" data-toggle=\"popover\" title=\"Metrics\"></i></div>";
+        displayMetrics(i);
     }
 
     function generateEmailTemplateRow(row_count, i) {
@@ -323,8 +333,8 @@
         var cells = [row.insertCell(0), row.insertCell(1)];
 
         cells[0].innerHTML = data[1][i].title;
-        cells[1].innerHTML = "<img class='icon' src='/images/pencil.png' onclick='editEmailTemplate(" + JSON.stringify(data[1][i]) + ")'/>";
-        cells[1].innerHTML += "<img class='icon' src='/images/delete.png' onclick='deleteEmailRow(\"" + data[1][i]._id + "\")'/>"
+        cells[1].innerHTML += "<img class='icon' src='/images/pencil.png' onclick='editEmailTemplate(" + JSON.stringify(data[1][i]) + ")'/>";
+        cells[1].innerHTML = "<img class='icon' src='/images/delete.png' onclick='deleteEmailRow(\"" + data[1][i]._id + "\")'/>"
     }
 
     function setPageButtons(tableNumber) {
@@ -370,5 +380,4 @@
     // Show page 1 initially
     changePage(0, 1);
 </script>
-
 </html>
